<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background ="@drawable/positivebeepgtwo"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginBottom="34dp"
        android:text="@string/menu"
        android:textSize="50sp"
        android:textColor="@color/black"/>

    <ImageView

        android:id="@+id/beeimagev2"
        android:layout_width="178dp"
        android:layout_height="122dp"
        android:layout_below="@+id/textQuestion"

        android:visibility="visible"
        app:srcCompat="@drawable/beehappy" />


    <Button
        android:id="@+id/option1_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/option1_text"
        android:textAllCaps="false"
        android:background="@color/COLOR1"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/option2_button"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/option2_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR3"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/option3_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option3_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR4"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/option4_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option4_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR5"
        android:textColor="@android:color/black"
        />




</LinearLayout>