<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otherpart2"
    android:background ="@color/COLOR5"
   >


    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="131dp"

        android:text="@string/mood_title"
        android:textColor="@color/MoodColor"


        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/option1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mood1"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.105"
        android:background="@color/COLOR3"
        android:textColor="@android:color/black"/>


    <Button
        android:id="@+id/option2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mood2"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option1"
        app:layout_constraintVertical_bias="0.131"
        android:background="@color/COLOR6"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/option3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mood3"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option2"
        app:layout_constraintVertical_bias="0.187"
        android:background="@color/COLOR1"
        android:textColor="@android:color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>